--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <a class="slider-point fa"></a>
             </div>
 
-            <a class="btnNavigation previous"><i class="fa fa-caret-left"></i></a>
-            <a class="btnNavigation next"><i class="fa fa-caret-right"></i></a>
+            <a class="previous"></a>
+            <a class="next"></a>
         </div>
 
         <div>
